AM_CXXFLAGS = $(BOOST_CPPFLAGS)
noinst_LTLIBRARIES = libMMDevice.la
libMMDevice_la_SOURCES = ModuleInterface.cpp Property.cpp DeviceUtils.cpp ImgBuffer.cpp \
	DeviceBase.h MMDevice.h MMDeviceConstants.h ModuleInterface.h Property.h DeviceUtils.h \
	ImgBuffer.h DeviceThreads.h ImageMetadata.h
	
EXTRA_DIST = license.txt
