#       -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.

AC_PREREQ(2.57)
AC_INIT(FULL-PACKAGE-NAME, VERSION, BUG-REPORT-ADDRESS)
#AC_CONFIG_SRCDIR([DemoCamera/DemoCamera.cpp])
AC_CANONICAL_HOST
AM_INIT_AUTOMAKE
AC_PROG_LIBTOOL

m4_include([../configure.common])

AX_BOOST_BASE
AX_BOOST_DATE_TIME

# Checks for typedefs, structures, and compiler characteristics.
AC_HEADER_STDBOOL
AC_C_CONST
AC_C_INLINE

# Checks for library functions.
AC_HEADER_STDC
AC_CHECK_FUNCS([memset])

AC_CONFIG_FILES(Makefile Test_MMCore/Makefile ModuleTest/Makefile)

AC_MSG_CHECKING(for libtiff)
AC_FIND_FILE([tiff.h], [/usr/include /usr/local/$ARCH/include], TIFFINCDIR)

if test x$TIFFINCDIR = xNO; then
   AC_MSG_RESULT([not found])
   exit 1
else
   AC_CHECK_HEADERS([$TIFFINCDIR/tiff.h])
   if test -z "$LIBTIFF" ; then
      AC_FIND_FILE([libtiff.a], [/usr/lib /usr/lib64 /usr/local/$ARCH/lib], TIFFLIBDIR)
      if test x$TIFFLIBDIR = xNO; then
         AC_MSG_RESULT([libtiff not found])
         exit 1
      else
         AC_MSG_RESULT([libtiff.a found])
         LIBTIFF="$TIFFLIBDIR/libtiff.a"
      fi
   fi
fi
AC_SUBST(LIBTIFF)

AC_OUTPUT
